--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "from typing import TypeVar, Generic, Type\n",
+    "from typing import get_args\n",
     "import datetime as dt\n",
     "import logging, dataclasses\n",
     "from dataclasses import field\n",
@@ -60,6 +60,7 @@
     "\n",
     "@dataclass\n",
     "class LobbyMember(fc.GetAttr, Model):\n",
+    "    _lobby_type = 'basic'\n",
     "    _ignore = ('user', 'send', 'ws')\n",
     "    _default = 'user'\n",
     "\n",
@@ -74,12 +75,15 @@
     "\n",
     "    send: Optional[FunctionType] = None\n",
     "    ws: Optional[WebSocket] = None\n",
-    "    \n",
+    "\n",
     "    def __post_init__(self):\n",
     "        if self.user: self.user_uid = self.user.uid\n",
-    "        if isinstance(self.joined_at, str): \n",
+    "        if isinstance(self.joined_at, str):\n",
     "            self.joined_at = dt.datetime.fromisoformat(self.joined_at)\n",
-    "            \n",
+    "\n",
+    "    def __init_subclass__(cls, **kwargs):\n",
+    "        super().__init_subclass__(**kwargs)\n",
+    "        LOBBY_REGISTRY[cls._lobby_type] = cls\n",
     "\n",
     "    def spectate(self): self.is_player = False\n",
     "\n",
@@ -99,18 +103,25 @@
     "    def is_host(self): return self.is_host_\n",
     "\n",
     "    def __eq__(self, other: Union[User, 'LobbyMember']): return self.uid == other.uid\n",
-    "    \n",
+    "\n",
     "    @classmethod\n",
     "    def from_cols(cls, data: dict):\n",
     "        data = cols2dict(data)\n",
     "        data[cls]['user'] = User.from_cols(data.pop(User))\n",
     "        return super().from_cols(data[cls])\n",
-    "    \n",
+    "\n",
     "    @classmethod\n",
-    "    def convert(cls, member: Optional['LobbyMember'] = None): \n",
-    "        if member: return cls(**asdict(member))\n",
-    "        \n",
-    "    def update_user(self, u: User): self.user = u\n"
+    "    def convert(cls, member: Optional['LobbyMember'] = None):\n",
+    "        cf = dataclasses.fields(cls)\n",
+    "        if member: return cls(**{f.name: getattr(member, f.name) for f in dataclasses.fields(member) if f in cf})\n",
+    "\n",
+    "    def update_user(self, u: User): self.user = u\n",
+    "\n",
+    "\n",
+    "# maps lobby names to memberTypes\n",
+    "LOBBY_REGISTRY = {\n",
+    "    LobbyMember._lobby_type: LobbyMember\n",
+    "}"
    ]
   },
   {
@@ -142,7 +153,20 @@
     "                  {mk_aliases(User, self.users)}\n",
     "                  from {self.members} join {self.users}\n",
     "                  on {cols.user_uid} = {self.users.c.uid} where {cols.lobby_id} = ?\"\"\"\n",
-    "        return list(map(LobbyMember.from_cols, self.db.q(qry, [lobby_id])))"
+    "        return list(map(LobbyMember.from_cols, self.db.q(qry, [lobby_id])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "MEMBER_MANAGER_REGISTRY = {}\n",
+    "\n",
+    "def register_manager(manager: DataManager, entity_cls: type):\n",
+    "    MEMBER_MANAGER_REGISTRY[entity_cls] = manager"
    ]
   },
   {
@@ -187,15 +211,27 @@
    "source": [
     "# | export\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class Lobby[T: LobbyMember](Model):\n",
-    "    _ignore = ('members', 'host', 'member_type')\n",
+    "    _ignore = ('members', 'host')\n",
     "    \n",
     "    id: str = field(default_factory=random_id)\n",
     "    member_type: type[T] = LobbyMember\n",
     "    host: Optional[T] = None\n",
     "    members: dict[str, T] = field(default_factory=dict)\n",
     "    last_active: dt.datetime = field(default_factory=dt.datetime.now)\n",
+    "    \n",
+    "    def _asdict(self):\n",
+    "        res =  super()._asdict()\n",
+    "        res['lobby_type'] = dict_inverse(LOBBY_REGISTRY)[res.pop('member_type')]\n",
+    "        return res\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def columns(cls):\n",
+    "        res =  super().columns()\n",
+    "        res['lobby_type'] = str; res.pop('member_type')\n",
+    "        return res\n",
     "\n",
     "    def __post_init__(self):\n",
     "        if self.host: self.host_uid = self.host.uid\n",
@@ -235,7 +271,12 @@
     "        self.member_type = member_type\n",
     "        for k in self.members.keys(): self.members[k] = member_type.convert(self.members[k])\n",
     "        self.host = member_type.convert(self.host)\n",
-    "        return self\n"
+    "        return self\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_cols(cls, data: dict):\n",
+    "        data['member_type'] = LOBBY_REGISTRY[data.pop('lobby_type')]\n",
+    "        return super().from_cols(data)\n"
    ]
   },
   {
@@ -247,10 +288,7 @@
     "# | export\n",
     "\n",
     "class LobbyManager(DataManager[Lobby]):\n",
-    "\n",
-    "    def __init__(self, member_manager: MemberManager):\n",
-    "        self.mm = member_manager\n",
-    "        super().__init__(self.mm.db)\n",
+    "    memm = MEMBER_MANAGER_REGISTRY\n",
     "\n",
     "    def _set_tables(self):\n",
     "        self.lobbies: fl.Table = self.db.t.lobbies.create(**Lobby.columns(), pk='id',\n",
@@ -258,13 +296,13 @@
     "        return self.lobbies\n",
     "\n",
     "    def update(self, lobby: Lobby[LobbyMember]):\n",
-    "        self.mm.upsert_all(lobby.members.values())\n",
+    "        self.memm[lobby.member_type].upsert_all(lobby.members.values())\n",
     "        return super().update(lobby)\n",
     "\n",
     "    def get(self, id: str) -> Lobby[LobbyMember]:\n",
     "        if id not in self.lobbies: return\n",
-    "        lobby = Lobby(**self.lobbies.get(id))\n",
-    "        lobby.members = {m.user_uid: m for m in self.mm.get_all(id)}\n",
+    "        lobby = Lobby.from_cols(self.lobbies.get(id))\n",
+    "        lobby.members = {m.user_uid: m for m in self.memm[lobby.member_type].get_all(id)}\n",
     "        hosts = [m for m in lobby.members.values() if m.is_host]\n",
     "        if hosts: lobby.host = hosts[0]\n",
     "        return lobby\n",
@@ -329,7 +367,9 @@
     "    def get_lobby(self, id: Optional[str] = None) -> Optional[Lobby]:\n",
     "        lobby = self.lobbies.get(id)\n",
     "        if lobby: return lobby\n",
-    "        return self.lm.get(id)\n",
+    "        lobby = self.lm.get(id)\n",
+    "        if lobby: self.lobbies[id] = lobby\n",
+    "        return lobby\n",
     "\n",
     "    def delete_lobby(self, id: str):\n",
     "        self.lobbies.pop(id)\n",
