--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "@dataclass\n",
     "class WhoAmIPlayer(LobbyMember):\n",
+    "    _lobby_type = 'whoami'\n",
     "    _ignore = LobbyMember._ignore + ('label_tfm',)\n",
     "    label_text: str = ''\n",
     "    label_tfm: Optional[PlayerLabel] = None\n",
