--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -177,7 +177,8 @@
    "source": [
     "db = init_db()\n",
     "um = UserManager(db)\n",
-    "mm = MemberManager(um)\n"
+    "mm = MemberManager(um)\n",
+    "register_manager(mm, LobbyMember)"
    ]
   },
   {
@@ -188,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "LobbyMember(user=User(uid='5gdw9', name='null', filename='hi'), user_uid='5gdw9', lobby_id=None, is_player=False, is_host_=False, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 15, 988262), score=0, id='ahxulzof', send=None, ws=None)"
+       "LobbyMember(user=User(uid='yk581', name='null', filename='hi'), user_uid='yk581', lobby_id=None, is_player=False, is_host_=False, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 15593), score=0, id='ld43m7wy', send=None, ws=None)"
       ]
      },
      "execution_count": null,
@@ -318,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "Lobby(id='t42do', host=LobbyMember(user=User(uid='sfngj', name='null', filename=None), user_uid='sfngj', lobby_id='t42do', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 37458), score=0, id='11tn0pia', send=None, ws=None), members={'e91xn': LobbyMember(user=User(uid='e91xn', name='null', filename=None), user_uid='e91xn', lobby_id='t42do', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 37458), score=0, id='m572oyez', send=None, ws=None), 'sfngj': LobbyMember(user=User(uid='sfngj', name='null', filename=None), user_uid='sfngj', lobby_id='t42do', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 37458), score=0, id='11tn0pia', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 0, 35, 16, 37458))"
+       "Lobby(id='3tsd9', member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='opdvg', name='null', filename=None), user_uid='opdvg', lobby_id='3tsd9', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 63567), score=0, id='4ahat67f', send=None, ws=None), members={'p0vkz': LobbyMember(user=User(uid='p0vkz', name='null', filename=None), user_uid='p0vkz', lobby_id='3tsd9', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 63567), score=0, id='0awtbp8p', send=None, ws=None), 'opdvg': LobbyMember(user=User(uid='opdvg', name='null', filename=None), user_uid='opdvg', lobby_id='3tsd9', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 63567), score=0, id='4ahat67f', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 63567))"
       ]
      },
      "execution_count": null,
@@ -327,7 +328,7 @@
     }
    ],
    "source": [
-    "lm = LobbyManager(mm)\n",
+    "lm = LobbyManager(db)\n",
     "l = lm.insert(Lobby())\n",
     "l.create_member(um.create())\n",
     "m = l.create_member(um.create())\n",
@@ -342,6 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# | export\n",
     "\n",
     "class LobbyService:\n",
@@ -403,10 +405,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lobby(id=1, member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='r9s2c', name='null', filename=UNSET), user_uid='r9s2c', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395), score=0, id='hgg9tc6t', send=None, ws=None), members={'r9s2c': LobbyMember(user=User(uid='r9s2c', name='null', filename=UNSET), user_uid='r9s2c', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395), score=0, id='hgg9tc6t', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395))\n",
+      "{'id': 1, 'last_active': datetime.datetime(2025, 1, 19, 4, 40, 59, 105395), 'lobby_type': 'basic'}\n",
+      "Lobby(id=2, member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None), members={'c1x9o': LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396))\n",
+      "{'id': 2, 'last_active': datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), 'lobby_type': 'basic'}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{1: Lobby(id=1, host=LobbyMember(user=User(uid='ivxwq', name='null', filename=UNSET), user_uid='ivxwq', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 124552), score=0, id='wtzyeee0', send=None, ws=None), members={'ivxwq': LobbyMember(user=User(uid='ivxwq', name='null', filename=UNSET), user_uid='ivxwq', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 124552), score=0, id='wtzyeee0', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 0, 35, 16, 124552)),\n",
-       " 2: Lobby(id=2, host=LobbyMember(user=User(uid='12b9m', name='null', filename=UNSET), user_uid='12b9m', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555), score=0, id='dh1rkeuw', send=None, ws=None), members={'12b9m': LobbyMember(user=User(uid='12b9m', name='null', filename=UNSET), user_uid='12b9m', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555), score=0, id='dh1rkeuw', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555))}"
+       "{1: Lobby(id=1, member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='r9s2c', name='null', filename=UNSET), user_uid='r9s2c', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395), score=0, id='hgg9tc6t', send=None, ws=None), members={'r9s2c': LobbyMember(user=User(uid='r9s2c', name='null', filename=UNSET), user_uid='r9s2c', lobby_id=1, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395), score=0, id='hgg9tc6t', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 105395)),\n",
+       " 2: Lobby(id=2, member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None), members={'c1x9o': LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396))}"
       ]
      },
      "execution_count": null,
@@ -428,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "{2: Lobby(id=2, host=LobbyMember(user=User(uid='12b9m', name='null', filename=UNSET), user_uid='12b9m', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555), score=0, id='dh1rkeuw', send=None, ws=None), members={'12b9m': LobbyMember(user=User(uid='12b9m', name='null', filename=UNSET), user_uid='12b9m', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555), score=0, id='dh1rkeuw', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 0, 35, 16, 125555))}"
+       "{2: Lobby(id=2, member_type=<class '__main__.LobbyMember'>, host=LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None), members={'c1x9o': LobbyMember(user=User(uid='c1x9o', name='null', filename=UNSET), user_uid='c1x9o', lobby_id=2, is_player=False, is_host_=True, joined_at=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396), score=0, id='lxst3tb0', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 19, 4, 40, 59, 106396))}"
       ]
      },
      "execution_count": null,
