more host settings, little fixes

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -140,6 +140,8 @@
     "    \n",
     "    id: str = field(default_factory=random_id)\n",
     "    lobby_type: str = LobbyMember._lobby_type\n",
+    "    locked: bool = False\n",
+    "    game_state: Optional[dict] = None\n",
     "    host: Optional[T] = None\n",
     "    members: dict[str, T] = field(default_factory=dict)\n",
     "    last_active: dt.datetime = field(default_factory=dt.datetime.now)\n",
@@ -173,6 +175,9 @@
     "    def get_member(self, uid: str) -> Optional[T]:\n",
     "        self.last_active = dt.datetime.now()\n",
     "        return self.members.get(uid)\n",
+    "    \n",
+    "    def lock(self): self.locked = True\n",
+    "    def unlock(self): self.locked = False\n",
     "\n",
     "    @fc.delegates(create_member)\n",
     "    def get_or_create_member(self, user: User, **kwargs) -> T:\n",
