--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -42,7 +42,7 @@
     "    label_text: str = ''\n",
     "    label_tfm: Optional[PlayerLabel] = None\n",
     "    notes: str = ''\n",
-    "    \n",
+    "\n",
     "    def __post_init__(self):\n",
     "        if isinstance(self.label_tfm, str): self.label_tfm = PlayerLabel(**ast.literal_eval(self.label_tfm))\n",
     "        return super().__post_init__()\n",
@@ -50,14 +50,20 @@
     "    def set_notes(self, notes: str): self.notes = notes\n",
     "    def set_label(self, label: str): self.label_text = label\n",
     "    def set_label_transform(self, tfm: dict = None): self.label_tfm = PlayerLabel(**(tfm or {}))\n",
-    "    \n",
+    "\n",
     "    @classmethod\n",
     "    def columns(cls):\n",
     "        cols = dict(set(super().columns().items()) - set(LobbyMember.columns().items()))\n",
     "        cols.update({'id': str})\n",
     "        return cols\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_cols(cls, data: dict):\n",
+    "        data = cols2dict(data)\n",
+    "        data[cls]['user'] = User.from_cols(data.pop(User))\n",
+    "        data[cls].update(data.pop(LobbyMember))\n",
+    "        return super(LobbyMember, cls).from_cols(data[cls])\n",
+    "\n",
     "\n",
     "WAILobby = Lobby[WhoAmIPlayer]"
    ]
