--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    cls += ' muted' if not is_connected else ''\n",
-    "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[data-username='{u.uid}']\")"
+    "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs)"
    ]
   },
   {
