[no-deploy] sync with notebook

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -348,7 +348,8 @@
     "        return self.create_lobby(u, id, ltype), True\n",
     "\n",
     "    def sync_active_lobbies_user(self, u: User):\n",
-    "        for l in self.lobbies.values(): l.members[u.uid].update_user(u)\n",
+    "        for l in self.lobbies.values(): \n",
+    "            if u.uid in l.members: l.members[u.uid].update_user(u)\n",
     "\n",
     "    def update(self, lobby: Lobby): self.lm.update(lobby)"
    ]
@@ -461,9 +462,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
