--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -462,13 +462,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.13.1"
   }
  },
  "nbformat": 4,
