refactoring: - fixed hard coded routes - fixed import - implemented DI

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -207,12 +207,14 @@
     "MEMBER_MANAGER_REGISTRY = {}\n",
     "\n",
     "\n",
-    "def register_manager[T: DataManager](manager: T, entity_cls: type) -> T:\n",
+    "def register_lobby_member_manager[T: DataManager](manager: T, entity_cls: type) -> T:\n",
+    "    '''Register a manager for an entity class'''\n",
     "    MEMBER_MANAGER_REGISTRY[entity_cls] = manager\n",
     "    return manager\n",
     "\n",
     "\n",
     "class LobbyManager(DataManager[Lobby]):\n",
+    "    '''Class to manage lobbies'''\n",
     "    memm = MEMBER_MANAGER_REGISTRY\n",
     "\n",
     "    def _set_tables(self):\n",
@@ -243,6 +245,7 @@
    "source": [
     "# | export\n",
     "class MemberManager(DataManager[LobbyMember]):\n",
+    "    '''Class to manage lobby members'''\n",
     "\n",
     "    def __init__(self, user_manager: UserManager):\n",
     "        self.um, self.users = user_manager, user_manager.users\n",
