hotfix: relative rt imports

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -430,12 +430,11 @@
     "def lobby_beforeware(service: LobbyService, skip=None):\n",
     "    '''Makes sure that request always contains valid lobby'''\n",
     "    def before(req: Request):\n",
-    "        u: User = req.state.user\n",
+    "        if 'session' not in req.scope: return\n",
     "        path_lobby_id = req.path_params.get('lobby_id')\n",
     "        if path_lobby_id: req.session['lobby_id'] = path_lobby_id\n",
     "        lobby: Lobby = service.get_lobby(req.session.get(\"lobby_id\"))\n",
-    "        if not lobby: raise HTTPException(404, 'Lobby not found')\n",
-    "        req.state.lobby = lobby\n",
+    "        if lobby: req.state.lobby = lobby\n",
     "        \n",
     "    return Beforeware(before, skip)"
    ]
